<resources>
    <string name="app_name">PopularMovies</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="movies">Movies</string>
    <string name="popular_movies">Poppular Movies</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="title_avtitity_movie_review">Review</string>
    <string name="release_date">Release Date</string>
    <string name="ratings">Ratings</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="make_as_favorite">MAKE AS FAVORITE</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="show_review">Show Review</string>
    <string name="add_favorite_movie">add favorite movie</string>
    <string name="remove_favorite_movie">remove favorite movie</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="high_rating_movies">High Rating Movies</string>
    <string name="no_review">There is no review</string>
</resources>
